objects/PMC_Shipment_Data__c.object
<CustomObject>
    <fields>
        <fullName>PMC_BOLNUMBER__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>BOLNUMBER</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PMC_BOL__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>BOL</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PMC_COMMENTS__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>COMMENTS</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PMC_CPQ_CurrentCoordinates__c</fullName>
        <label>CurrentCoordinates</label>
        <scale>6</scale>
        <type>Location</type>
    </fields>
    <fields>
        <fullName>PMC_CPQ_SAPDeliveryID__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Delivery Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PMC_CPQ_ShipmentNumber__c</fullName>
        <label>Shipment Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PMC_CPQ_Shipment_PO__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>Shipment PO</label>
        <length>30</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>PMC_CURRENTCARRIER__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>CURRENTCARRIER</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PMC_CURRENTLOCATION__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>CURRENTLOCATION</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PMC_CUSTORDERNO__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>CUSTORDERNO</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PMC_DELIVERYNUMBER__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>DELIVERYNUMBER</label>
        <length>252</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PMC_DESTINATIONCARRIER__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>DESTINATIONCARRIER</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PMC_DESTINATIONMM__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>DESTINATIONMM</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PMC_Deliveries_Updated__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Deliveries Updated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PMC_EQUIPMENTID__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>EQUIPMENTID</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PMC_ETA__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>ETA</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>PMC_FLEETTOWNAME__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>FLEETTOWNAME</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PMC_LATESTINTERNALCOMMENT__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>LATESTINTERNALCOMMENT</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PMC_LATESTTRIPSIGHTINGID__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>LATESTTRIPSIGHTINGID</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PMC_PONUMBER__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>PONUMBER</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PMC_SHIPMENTNUMBER_CNTORDER__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>SHIPMENTNUMBER_CNTORDER</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PMC_SIGHTINGDESTINATION__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>SIGHTINGDESTINATION</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PMC_SIGHTINGLOADOREMPTY__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>SIGHTINGLOADOREMPTY</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <label>Shipment Data</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>PMC_CPQ_SAPDeliveryID__c</columns>
        <columns>PMC_CPQ_Shipment_PO__c</columns>
        <columns>PMC_CPQ_ShipmentNumber__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Intellitrans_Shipment_Data_View</fullName>
        <columns>PMC_EQUIPMENTID__c</columns>
        <columns>NAME</columns>
        <columns>PMC_CURRENTCARRIER__c</columns>
        <columns>PMC_CPQ_CurrentCoordinates__Latitude__s</columns>
        <columns>PMC_CPQ_CurrentCoordinates__Longitude__s</columns>
        <columns>PMC_CUSTORDERNO__c</columns>
        <columns>PMC_DELIVERYNUMBER__c</columns>
        <columns>PMC_ETA__c</columns>
        <columns>PMC_FLEETTOWNAME__c</columns>
        <columns>PMC_Deliveries_Updated__c</columns>
        <columns>PMC_CPQ_SAPDeliveryID__c</columns>
        <columns>PMC_PONUMBER__c</columns>
        <columns>PMC_CPQ_ShipmentNumber__c</columns>
        <columns>PMC_CPQ_Shipment_PO__c</columns>
        <columns>PMC_SHIPMENTNUMBER_CNTORDER__c</columns>
        <filterScope>Mine</filterScope>
        <label>Intellitrans Shipment Data View</label>
    </listViews>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Shipment Data Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Shipment Data</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>